--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "open-api"
   ],
   "engines": {
-    "node": ">=12 <=16",
-    "npm": ">= 6 <=8"
+    "node": ">=18 <=22",
+    "npm": "<=11"
   },
   "scripts": {
     "bootstrap": "npm install lerna && lerna bootstrap && npm install",
@@ -49,29 +49,29 @@
     "prepublishOnly": "npm run build"
   },
   "devDependencies": {
-    "@lerna/publish": "6.3.0",
-    "@lerna/run": "6.6.1",
-    "@types/jest": "27.4.1",
-    "eslint": "8.35.0",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-n": "15.6.1",
-    "eslint-plugin-promise": "6.1.1",
-    "jest": "26.6.3",
+    "@lerna/publish": "^6.6.2",
+    "@lerna/run": "^6.6.2",
+    "@types/jest": "30.0.0",
+    "eslint": "9.29.0",
+    "eslint-plugin-import": "2.32.0",
+    "eslint-plugin-n": "17.20.0",
+    "eslint-plugin-promise": "7.2.1",
+    "jest": "^30.0.2",
     "jest-junit": "16.0.0",
-    "lerna": "6.6.1",
+    "lerna": "^8.2.2",
     "npm-run-all": "^4.1.5",
-    "prettier": "2.8.8",
-    "rimraf": "^5.0.0",
+    "prettier": "3.6.0",
+    "rimraf": "^6.0.1",
     "standard-version": "9.5.0",
-    "ts-jest": "26.5.6",
-    "ts-node": "10.9.1",
+    "ts-jest": "^29.4.0",
+    "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "4.9.5"
+    "typescript": "5.8.3"
   },
   "dependencies": {
-    "reflect-metadata": "0.2.1"
+    "reflect-metadata": "0.2.2"
   },
   "volta": {
-    "node": "16.20.2"
+    "node": "22.16.0"
   }
 }
