--- a/packages/http-logger-middleware/package.json
+++ b/packages/http-logger-middleware/package.json
@@ -5,6 +5,7 @@
   "author": "bogdanlupu <lupu60@gmail.com>",
   "homepage": "https://github.com/lupu60/nestjs-toolbox/tree/master/packages/http-logger-middleware#readme",
   "license": "MIT",
+  "type": "module",
   "keywords": [
     "nestjs",
     "http-logger-middleware"
@@ -33,16 +34,16 @@
     "cleanup": "rimraf -rf dist coverage",
     "compile": "tsc -p tsconfig.build.json",
     "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
-    "test": "jest --ci --config ../../jest.config.json ",
+    "test": "NODE_OPTIONS='--experimental-vm-modules' jest --ci --config ../../jest.config.json ",
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@nestjs/common": "11.1.2",
+    "@nestjs/common": "11.1.3",
     "chalk": "4.1.2"
-  },
+   },
   "devDependencies": {
-    "rimraf": "5.0.5",
-    "typescript": "4.9.5"
+    "rimraf": "6.0.1",
+    "typescript": "5.8.3"
   },
   "gitHead": "bfa41a24d5c085427ced65ff92078936ffdf62b6"
 }
