build(workspaces): add workspaces configuration and update package dependencies

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "winston",
     "open-api"
   ],
+  "workspaces": ["packages/*"],
   "engines": {
     "node": ">=18 <=22",
     "npm": "<=11"
