--- a/packages/access-control/package.json
+++ b/packages/access-control/package.json
@@ -42,10 +42,10 @@
     "prepublishOnly": "npm run build"
   },
   "dependencies": {
-    "@nestjs/common": "^11.1.3",
-    "@nestjs/core": "^11.1.3",
+    "@nestjs/common": "11.1.3",
+    "@nestjs/core": "11.1.3",
     "reflect-metadata": "^0.2.2",
-    "role-acl": "4.5.4"
+    "role-acl": "^3.2.2"
   },
   "devDependencies": {
     "@nestjs/testing": "11.1.3",
