--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,10 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Npm install
-        run: npm ci
-
-      - name: Bootstrap packages
-        run: npm run bootstrap
+        run: npm install
 
       - name: Build all packages
         run: npm run build
