--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "winston",
     "open-api"
   ],
-  "workspaces": ["packages/*"],
+  "workspaces": [
+    "packages/*"
+  ],
   "engines": {
     "node": ">=18 <=22",
     "npm": "<=11"
   },
   "scripts": {
-    "bootstrap": "npm install lerna && npm ci",
     "format": "prettier --write \"packages/**/*.{ts,json}\"",
     "reset": "npm run cleanup && rimraf -rf node_modules",
     "test": "lerna run test",
