build(deps): remove deprecated @types/commander from package-lock and package.json

--- a/packages/winston-logger/package.json
+++ b/packages/winston-logger/package.json
@@ -28,10 +28,11 @@
   "types": "dist/index",
   "files": [
     "dist"
-  ],  "engines": {
-   "node": ">=18 <=22",
-   "npm": "<=11"
- },
+  ],
+  "engines": {
+    "node": ">=18 <=22",
+    "npm": "<=11"
+  },
   "scripts": {
     "build": "npm run clean && npm run compile",
     "clean": "rimraf -rf ./dist",
