chore: change package.json from private to public

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/lupu60/nestjs-toolbox#readme",
   "repository": {
     "type": "git",
