fix: apply critical issues and improvements
Critical fixes:
- Fix allOf bug in open-api-spec-to-ts (line 78)
- Fix error swallowing in typeorm-upsert (re-throw errors)
- Remove obsolete .travis.yml

High priority improvements:
- Enable TypeScript strict mode
- Migrate all packages from TSLint to ESLint
- Update GitHub Actions to v4 with caching
- Fix type issues: reduce any usage significantly
- Add proper types for winston logger, http middleware, typeorm packages
- Add constants for magic numbers
- Improve error handling with proper error messages
- Optimize array operations (use flatMap instead of reduce+concat)

--- a/packages/http-logger-middleware/package.json
+++ b/packages/http-logger-middleware/package.json
@@ -33,7 +33,7 @@
     "clean": "rimraf -rf ./dist",
     "cleanup": "rimraf -rf dist coverage",
     "compile": "tsc -p tsconfig.build.json",
-    "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
+    "lint": "eslint src --ext .ts",
     "test": "NODE_OPTIONS='--experimental-vm-modules' jest --ci --config ../../jest.config.json ",
     "prepublishOnly": "npm run build"
   },
@@ -42,6 +42,7 @@
     "chalk": "4.1.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "rimraf": "6.0.1",
     "typescript": "5.8.3"
   },
