fix: additional TypeScript strict mode fixes
- Fix open-api-spec-to-ts: add @types/lodash, fix file operations, fix undefined checks
- Fix typeorm-paginate: add ObjectLiteral constraint, fix count parameter
- Partial fixes for bunyan-logger, access-control, version-generator (more fixes needed)

--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -52,6 +52,7 @@
   },
   "gitHead": "cc4a6899ce809f5cb33825baf5bce97e0a339b46",
   "devDependencies": {
+    "@types/bunyan-format": "^0.2.4",
     "@types/node": "24.0.3",
     "rimraf": "~6.0.1",
     "typescript": "5.8.3"
