--- a/packages/open-api-spec-to-ts/package.json
+++ b/packages/open-api-spec-to-ts/package.json
@@ -53,6 +53,7 @@
     "ts-node": "10.9.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.5.7",
     "typescript": "4.9.5"
   },
