--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -38,7 +38,7 @@
     "clean": "rimraf -rf ./dist",
     "cleanup": "rimraf -rf dist coverage",
     "compile": "tsc -p tsconfig.build.json",
-    "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
+    "lint": "eslint src --ext .ts",
     "test": "jest --ci --config ../../jest.config.json ",
     "prepublishOnly": "npm run build"
   },
@@ -52,6 +52,7 @@
   },
   "gitHead": "cc4a6899ce809f5cb33825baf5bce97e0a339b46",
   "devDependencies": {
+    "@types/bunyan-format": "^0.2.4",
     "@types/node": "24.0.3",
     "rimraf": "~6.0.1",
     "typescript": "5.8.3"
