--- a/packages/open-api-spec-to-ts/package.json
+++ b/packages/open-api-spec-to-ts/package.json
@@ -37,7 +37,7 @@
     "clean": "rimraf -rf ./dist",
     "cleanup": "rimraf -rf dist coverage ",
     "compile": "tsc -p tsconfig.build.json",
-    "lint": "tslint -p tsconfig.build.json -c ../../tslint.json",
+    "lint": "eslint src --ext .ts",
     "test": "jest --ci --config ../../jest.config.json ",
     "prepublishOnly": "npm run build"
   },
@@ -53,6 +53,7 @@
     "ts-node": "10.9.1"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "20.5.7",
     "typescript": "4.9.5"
   },
