fix: sync ESLint and Prettier configurations
- Install eslint-config-prettier to disable conflicting ESLint formatting rules
- Remove formatting rules from ESLint (semi, quotes, comma-dangle, etc.)
  as Prettier handles all formatting
- Keep code quality rules in ESLint (eqeqeq, curly, no-var, etc.)
- Format and lint now work together without conflicts

This ensures that running 'npm run format' followed by 'npm run lint'
will always pass, and vice versa.

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "eslint": "9.29.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-n": "17.20.0",
     "eslint-plugin-promise": "7.2.1",
