--- a/packages/access-control/package.json
+++ b/packages/access-control/package.json
@@ -44,8 +44,18 @@
   "dependencies": {
     "@nestjs/common": "11.1.11",
     "@nestjs/core": "11.1.11",
+    "ansis": "^4.2.0",
+    "buffer": "^6.0.3",
+    "dayjs": "^1.11.19",
+    "dedent": "^1.7.1",
+    "dotenv": "^17.2.3",
+    "glob": "^13.0.0",
     "reflect-metadata": "^0.2.2",
-    "role-acl": "^3.2.2"
+    "role-acl": "^3.2.2",
+    "sha.js": "^2.4.12",
+    "to-buffer": "^1.2.2",
+    "typeorm": "^0.3.28",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@nestjs/testing": "11.1.11",
