--- a/packages/bootstrap-log/package.json
+++ b/packages/bootstrap-log/package.json
@@ -45,9 +45,19 @@
   },
   "dependencies": {
     "@nestjs/common": "11.1.3",
+    "ansis": "^4.2.0",
+    "buffer": "^6.0.3",
     "colors": "1.4.0",
+    "dayjs": "^1.11.19",
+    "dedent": "^1.7.1",
+    "dotenv": "^17.2.3",
+    "glob": "^13.0.0",
     "reflect-metadata": "0.2.2",
-    "ts-node": "10.9.2"
+    "sha.js": "^2.4.12",
+    "to-buffer": "^1.2.2",
+    "ts-node": "10.9.2",
+    "typeorm": "^0.3.28",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/node": "24.0.3",
