--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -45,10 +45,20 @@
   "dependencies": {
     "@nestjs/common": "11.1.3",
     "@types/bunyan": "1.8.11",
+    "ansis": "^4.2.0",
+    "buffer": "^6.0.3",
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
     "colors": "1.4.0",
-    "ts-node": "10.9.2"
+    "dayjs": "^1.11.19",
+    "dedent": "^1.7.1",
+    "dotenv": "^17.2.3",
+    "glob": "^13.0.0",
+    "sha.js": "^2.4.12",
+    "to-buffer": "^1.2.2",
+    "ts-node": "10.9.2",
+    "typeorm": "^0.3.28",
+    "uuid": "^13.0.0"
   },
   "gitHead": "cc4a6899ce809f5cb33825baf5bce97e0a339b46",
   "devDependencies": {
