--- a/packages/bootstrap-log/package.json
+++ b/packages/bootstrap-log/package.json
@@ -47,7 +47,9 @@
     "@nestjs/common": "11.1.3",
     "colors": "1.4.0",
     "reflect-metadata": "0.2.2",
-    "ts-node": "10.9.2"
+    "ts-node": "10.9.2",
+    "bunyan-format": "^0.2.1",
+    "chalk": "^5.3.0"
   },
   "devDependencies": {
     "@types/node": "24.0.3",
