--- a/packages/bunyan-logger/package.json
+++ b/packages/bunyan-logger/package.json
@@ -48,8 +48,7 @@
     "bunyan": "1.8.15",
     "bunyan-format": "0.2.1",
     "colors": "1.4.0",
-    "ts-node": "10.9.2",
-    "chalk": "^5.3.0"
+    "ts-node": "10.9.2"
   },
   "gitHead": "cc4a6899ce809f5cb33825baf5bce97e0a339b46",
   "devDependencies": {
