--- a/packages/http-logger-middleware/package.json
+++ b/packages/http-logger-middleware/package.json
@@ -39,9 +39,7 @@
   },
   "dependencies": {
     "@nestjs/common": "11.1.3",
-    "chalk": "4.1.2",
-    "bunyan-format": "^0.2.1",
-    "colors": "^1.4.0"
+    "chalk": "4.1.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
