Configure Biome with comprehensive NestJS-friendly settings
- Add detailed Biome configuration for TypeScript and NestJS
- Enable parameter decorators
- Set up linting and formatting rules
- Create migration script for toolchain transition
- Customize rules for different file types

--- a/.config/biome.json
+++ b/.config/biome.json
@@ -5,32 +5,81 @@
   },
   "formatter": {
     "enabled": true,
-    "indentStyle": "space",
+    "formatWithErrors": true,
+    "indentStyle": "space", 
     "indentWidth": 2,
-    "lineWidth": 100
+    "lineWidth": 120,
+    "ignore": [
+      "**/node_modules/**",
+      "**/.git/**",
+      "**/.next/**",
+      "**/.turbo/**"
+    ]
   },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
+      "complexity": {
+        "noExcessiveCognitiveComplexity": ["error", { "max": 15 }]
+      },
       "correctness": {
+        "noConstAssign": "error",
+        "noInvalidUseBeforeDeclaration": "error",
         "noUnusedVariables": "error"
       },
+      "security": {
+        "noGlobalEval": "error"
+      },
       "style": {
-        "noNonNullAssertation": "error"
+        "useConsistentArrayType": "error",
+        "useNamingConvention": "error"
+      },
+      "suspicious": {
+        "noShadowRestrictedNames": "error"
       }
     }
   },
   "javascript": {
     "formatter": {
       "quoteStyle": "single",
-      "trailingComma": "all"
+      "trailingComma": "all",
+      "semicolons": "always"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
   },
   "typescript": {
     "formatter": {
       "quoteStyle": "single",
-      "trailingComma": "all"
+      "trailingComma": "all",
+      "semicolons": "always"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
     }
-  }
+  },
+  "overrides": [
+    {
+      "include": ["*.spec.ts", "*.test.ts"],
+      "linter": {
+        "rules": {
+          "correctness": {
+            "noUnusedVariables": "off"
+          }
+        }
+      }
+    },
+    {
+      "include": ["src/**/*.ts"],
+      "linter": {
+        "rules": {
+          "style": {
+            "noNonNullAssertation": "error"
+          }
+        }
+      }
+    }
+  ]
 }
