--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,25 +26,6 @@ jobs:
       - name: Run ESLint
         run: npm run lint
 
-  format:
-    name: Format Check
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.x'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Check formatting
-        run: npx prettier --check "packages/**/*.{ts,json}"
-
   type-check:
     name: Type Check
     runs-on: ubuntu-latest
@@ -66,7 +47,7 @@ jobs:
           for dir in packages/*/; do
             echo "Type checking $dir"
             cd "$dir"
-            npx tsc --noEmit || exit 1
+            npx tsc --noEmit -p tsconfig.build.json || exit 1
             cd ../..
           done
 
