chore: Update GitHub Actions workflows to ignore markdown files in CI triggers
Added paths-ignore configuration for markdown files in lint-and-format.yml, nodejs.yml, pr-validation.yml, and type-check.yml workflows to prevent unnecessary CI runs on documentation changes.

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -3,8 +3,12 @@ name: Node CI
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   lint:
