--- a/.github/workflows/type-check.yml
+++ b/.github/workflows/type-check.yml
@@ -3,8 +3,12 @@ name: Type Check
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '**.md'
 
 jobs:
   type-check:
