chore: Update gitHead references in package.json files for multiple packages
Updated the "gitHead" field in the package.json files of bootstrap-log, typeorm-paginate, typeorm-soft-delete, and winston-logger to reflect the latest commit hash.

--- a/packages/typeorm-soft-delete/package.json
+++ b/packages/typeorm-soft-delete/package.json
@@ -59,5 +59,6 @@
     "@nest-toolbox/typeorm-paginate": {
       "optional": true
     }
-  }
+  },
+  "gitHead": "0fc1fa0385b70239bb084ebfc6597e540c06f2de"
 }
