feat(show_case): integrate typeorm-audit-log package
- Add @nest-toolbox/typeorm-audit-log dependency
- Configure AuditLogModule in AppModule with 90-day retention
- Apply AuditContextMiddleware for user context capture
- Add @Auditable to User and Product entities
- Add @AuditMask to User.email for privacy

--- a/show_case/package.json
+++ b/show_case/package.json
@@ -33,6 +33,7 @@
     "@nest-toolbox/progress-bar": "^1.8.1",
     "@nest-toolbox/typeorm-paginate": "^1.8.1",
     "@nest-toolbox/typeorm-soft-delete": "^1.8.1",
+    "@nest-toolbox/typeorm-audit-log": "^1.0.0",
     "@nest-toolbox/typeorm-upsert": "^1.8.1",
     "@nest-toolbox/version-generator": "^1.8.1",
     "@nest-toolbox/winston-logger": "^1.8.1",
