--- a/packages/typeorm-audit-log/package.json
+++ b/packages/typeorm-audit-log/package.json
@@ -57,6 +57,7 @@
   "peerDependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.0",
     "typeorm": "^0.3.0"
   }
 }
